[package]
name = "clarabel_c"
version = "0.1.0"
edition = "2021"

[dependencies]
clarabel = { path = "../Clarabel.rs" }
paste = "1.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
# Define features for SDP support in Clarabel.rs
sdp = ["clarabel/sdp"]
sdp-accelerate = ["sdp", "clarabel/sdp-accelerate"]
sdp-netlib     = ["sdp", "clarabel/sdp-netlib"]
sdp-openblas   = ["sdp", "clarabel/sdp-openblas"]
sdp-mkl        = ["sdp", "clarabel/sdp-mkl"]
sdp-r          = ["sdp", "clarabel/sdp-r"]
