[package]
name = "clarabel_c"
version = "0.1.0"
edition = "2021"

[dependencies]
clarabel = { path = "../Clarabel.rs" }
paste = "1.0"
serde = { version = "1", optional = true }
cfg-if = "1.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
sdp = []
serde = ["dep:serde"]
